fix logotray alignment

--- a/front-end/src/components/LogoTray.css
+++ b/front-end/src/components/LogoTray.css
@@ -6,7 +6,7 @@
 }
 
 #logo-img-cone {    
-    height: 30px;
+    height: 42px;
     width: 20px;
     
 }
@@ -15,6 +15,7 @@
     height: 30px;
     width: 200px;
     padding-right: 8px;
+    padding-top:6px;
     
 }
 
